--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "engines": {
     "node": ">=8.1.2"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/P31umi/cassettes.git"
+  },
   "scripts": {
     "dev": "node server.js",
     "build": "next build",
@@ -14,23 +18,23 @@
     "alias": "cassettes.now.sh"
   },
   "dependencies": {
-    "autoprefixer": "8.6.3",
-    "axios": "^0.18.0",
-    "babel-plugin-module-resolver": "3.1.1",
+    "autoprefixer": "9.6.0",
+    "axios": "^0.19.0",
+    "babel-plugin-module-resolver": "3.2.0",
     "babel-plugin-wrap-in-js": "^1.1.1",
     "date-fns": "^2.0.0-alpha.1",
-    "express": "^4.16.3",
-    "glob": "7.1.2",
+    "express": "^4.17.1",
+    "glob": "7.1.4",
     "meta-marked": "^0.4.2",
-    "next": "^6.0.3",
-    "next-url-prettifier": "^1.3.0",
-    "now": "^11.2.4",
+    "next": "^8.1.0",
+    "next-url-prettifier": "^1.4.0",
+    "now": "^15.6.0",
     "postcss-easy-import": "3.0.0",
-    "postcss-loader": "2.1.5",
-    "prop-types": "^15.6.2",
-    "raw-loader": "^0.5.1",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
+    "postcss-loader": "3.0.0",
+    "prop-types": "^15.7.2",
+    "raw-loader": "^3.0.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "speakingurl": "^14.0.1"
   },
   "devDependencies": {
