--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "autoprefixer": "9.6.0",
     "axios": "^0.19.0",
+    "babel-loader": "^8.1.0",
     "babel-plugin-module-resolver": "3.2.0",
     "babel-plugin-wrap-in-js": "^1.1.1",
     "date-fns": "^2.0.0-alpha.1",
